test/tasty/neg/src-2/TestStaticAnnot.check
TestStaticAnnot_fail.scala:5: error: Unsupported Scala 3 annotation on method sum: @scala.annotation.static; found in object tastytest.StaticAnnot.
  def test = assert(StaticAnnot.sum(1,2) == 3)
                                ^
1 error
